Updated project with latest UI and improvements