@@ -6,14 +6,11 @@ import com.civicresolver.backend.user.User;
 import com.civicresolver.backend.user.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class ComplaintService {
 
     private final ComplaintRepository complaintRepository;
@@ -32,7 +29,7 @@ public class ComplaintService {
                 .location(dto.getLocation())
                 .imageUrl(dto.getImageUrl())
                 .status(ComplaintStatus.PENDING)
-                .createdBy(user)
+                .createdById(user.getId())
                 .build();
 
         Complaint saved = complaintRepository.save(complaint);
@@ -44,14 +41,14 @@ public class ComplaintService {
         User user = userRepository.findByEmail(userEmail)
                 .orElseThrow(() -> new RuntimeException("User not found"));
 
-        return complaintRepository.findByCreatedBy(user)
+        return complaintRepository.findByCreatedByIdOrderByCreatedAtDesc(user.getId())
                 .stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Get a single complaint by ID
-    public ComplaintResponseDTO getComplaint(Long id) {
+    public ComplaintResponseDTO getComplaint(String id) {
         Complaint complaint = complaintRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Complaint not found"));
         return mapToDTO(complaint);
@@ -59,14 +56,18 @@ public class ComplaintService {
 
     // Get all public complaints (for gallery)
     public List<ComplaintResponseDTO> getPublicComplaints() {
-        return complaintRepository.findAll()
+        return complaintRepository.findAllByOrderByCreatedAtDesc()
                 .stream()
                 .map(this::mapToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Mapping entity -> DTO
     private ComplaintResponseDTO mapToDTO(Complaint c) {
+        String createdByName = userRepository.findById(c.getCreatedById())
+                .map(User::getName)
+                .orElse("Unknown User");
+
         return ComplaintResponseDTO.builder()
                 .id(c.getId())
                 .title(c.getTitle())
@@ -75,7 +76,7 @@ public class ComplaintService {
                 .status(c.getStatus())
                 .location(c.getLocation())
                 .imageUrl(c.getImageUrl())
-                .createdByName(c.getCreatedBy().getName())
+                .createdByName(createdByName)
                 .createdAt(c.getCreatedAt())
                 .build();
     }
